New stored request+imp; Changes per PR.